# gingivitis_diffusion

./: .gitignore  CMakeLists.txt  build.sh  buildbis.sh  data.csv  j.json
src/: mainconsole.cpp  mainviewer.cpp
src/core/: .GingiCell.hpp.swp  Bodies3D.hpp  GingiCell.hpp  GingiScenario.hpp  Plugins3D.hpp
